tests/bug_detector_tests/strictModeR21.js
"use strict";

// [R21]
function eval() {}
function arguments() {}

function notStrict() {
    // [R21]
    function eval() {}
    function arguments() {}
}

notStrict();
